crates/whiphand-tui/tests/snapshots/snapshots__detail_rename_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                 "
"checkout flow (20261010-100000-a1b2)  feature  running  5m 0s  waiting on you  ⎇"
"                                                                                "
"┌ Steps ───────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                                      │"
"│▾ ● fix-cycle  ↻ 2/3                                                          │"
"│    ● execute ×2                                                              │"
"│    ○ tests ×2                                                                │"
"│  ○ sign-off                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                      │"
"│10:01:10 plan           done, exit code 0                                     │"
"│10:01:10 -              loop 'fix-cycle' started, up to 3 iteration(s)        │"
"│10:01:10 execute        step started (agent, runner=claude, mode=headless)    │"
"│10:02:00 execute        Edit src/cart.ts                                      │"
"│10:02:30 tests          step started (command)                                │"
"│10:02:31 tests          ✓ 41 passed                                           │"
"│10:02:31 tests          ✗ cart totals round to cents                          │"
"│10:02:32 tests          done, exit code 1                                     │"
"│10:03:00 execute        step started (agent, runner=claude, mode=headless)    │"
"│10:04:00 execute        Rounding with Math.round(x * 100) / 100 now.          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Name for 20261010-100000-a1b2 (empty clears it): checkout flo▏w  Enter ok  ·  E"
