crates/whiphand-tui/tests/snapshots/snapshots__detail_stages_failed_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                 "
"20261009-170000-e5f6  develop  failed  1h 2m                                    "
"stopped at stage 2 of 3 · Add API routes after 2 rejections                     "
"┌ Steps ───────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                                      │"
"│▾ ✘ build  on stage 2 of 3                                                    │"
"│  ▾ stage 1 of 3 · Schema  done · 19m 0s · 12 turns · $0.84                   │"
"│      ✔ implement                                                             │"
"│      ✔ accept                                                                │"
"│  ▾ stage 2 of 3 · Add API routes  attempt 1 of 2  failed                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                      │"
"│Nothing logged here yet.                                                      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Tab switch pane  ·  1-4 tabs  ·  h ← collapse  ·  l → expand  ·  e errors only "
